# AMI

./: .appveyor.yml  .travis.yml  CMakeLists.txt  MANIFEST.in  README.rst  circle.yml  setup.cfg  setup.py
.circleci/: circle.yml  config.yml
bindings/python/: CMakeLists.txt  pyAMI.cpp  pyAMI.hpp  pyXML.cpp
cmake/: AMICompilerFlags.cmake  AMIDependencies.cmake  AMIGit.cmake  AMIOptions.cmake
examples/: manifest_reader.py  simple.py  visitor.py
include/AMI/: AMI.hpp  XML.hpp  visibility.h
res_values/: generate_header.py
src/: Activity.cpp  AndroidManifestImpl.cpp  AndroidManifestImpl.hpp  Application.cpp  BroadcastReceiver.cpp  Manifest.cpp  ManifestReader.cpp  ManifestReader.hpp  Permission.cpp  PrettyPrinter.cpp  PrettyPrinter.hpp  Service.cpp  XML.cpp  internal_structures.hpp  macros.h  res_val.hpp  xml_search.cpp  xml_search.hpp
test/: basic_tests.py  com.android.chrome.xml  com.github.skylot.jadx.testapp.xml  com.netflix.mediaclient.ami.xml  com.netflix.mediaclient.xml  com.supercell.clashofclans.ami.xml  com.supercell.clashofclans.xml
tools/: CMakeLists.txt  manifest_reader.cpp
