[metadata]
name             = python-ami
version          = 0.1.1
description      = Android Manifest Information
long_description = file: README.rst, LICENSE
author           = Romain Thomas
author_email     = rthomas@quarkslab.com
license          = Apache 2.0
keywords         = android, manifeset, parser
url              = https://github.com/romainthomas/AMI
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: C++
    Topic :: Software Development :: Libraries

[options]
zip_safe = False
packages = find:
include_package_data = True

[build_ext]
inplace=1
